--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "local": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@react-three/fiber": "^9.2.0",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.5",
     "next": "15.4.1",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
